--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Shopping website
                 </h2>
             <div class="card">
-<img src="https://rukminim1.flixcart.com/image/880/1056/kf1fo280hlty2aw-0/t-shirt/w/s/e/-original-imafdfvvr8hqdu65.jpeg?q=50">
+<img src="https://thumbs.dreamstime.com/b/fashion-portrait-young-man-shirt-poses-white-background-studio-fashion-portrait-young-man-shirt-white-169869281.jpg">
 <div class="details">
 <h3>mens flexble pant & shirt</h3>
 </div>
@@ -39,7 +39,7 @@
 </div>
             </div>
             <div class="card">
-                <img src="https://rukminim1.flixcart.com/image/880/1056/kf1fo280hlty2aw-0/t-shirt/w/s/e/-original-imafdfvvr8hqdu65.jpeg?q=50">
+                <img src="https://i.pinimg.com/474x/17/1b/f1/171bf1133abc78b49a446f2f3c51fb23--fashion-ideas-style-fashion.jpg">
                 <div class="details">
                 <h3>mens flexble pant & shirt</h3>
                 </div>
@@ -56,7 +56,7 @@
                     <a href="https://www.flipkart.com/helmont-striped-men-hooded-neck-red-black-t-shirt/p/itmfdfvufw3fmuhz?pid=TSHFDFTFFR2QUDWV&lid=LSTTSHFDFTFFR2QUDWVQIYWB1&marketplace=FLIPKART&q=mens+dress&store=clo&srno=s_1_11&otracker=search&otracker1=search&fm=Search&iid=3dc00084-1e06-45f8-8a3b-31db82f26098.TSHFDFTFFR2QUDWV.SEARCH&ppt=sp&ppn=sp&qH=89fe93efae03bfc7"><span>197 </span>buy</a>
                 </div>
                             </div>  <div class="card">
-                                <img src="https://rukminim1.flixcart.com/image/880/1056/kf1fo280hlty2aw-0/t-shirt/w/s/e/-original-imafdfvvr8hqdu65.jpeg?q=50">
+                                <img src="https://i.pinimg.com/originals/26/28/6e/26286eb4226ef09560fff1210d38f5fd.jpg">
                                 <div class="details">
                                 <h3>mens flexble pant & shirt</h3>
                                 </div>
